fix(css): text wrap in code blocks

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -114,6 +114,11 @@
   ::-webkit-scrollbar-thumb:hover {
     @apply bg-skin-card-muted;
   }
+
+  code {
+    white-space: pre;
+    overflow: scroll;
+  }
 }
 
 @layer components {
